--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Typescript todo app",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --open",
     "build": "webpack"
   },
   "author": "",
