Add type definitions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
         "outDir": "./output/",
+        "strict": true,
         "noImplicitAny": true,
         "module": "es6",
         "target": "es5",
-        "allowJs": true
+        "allowJs": true,
+        "declaration": true
     }
 }
